2009-11-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add ROBOPTIM_DLLLOCAL when needed.
	* src/finite-difference-gradient.cc: Here.

2009-11-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add ``this->'' in template code to help the compiler.
	* include/roboptim/core/problem.hxx,
	* include/roboptim/core/solver.hxx: Here.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Factorize rules using build-aux.
	* Makefile.am: Use factorized rules..
	* build-aux: Synchronize.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Move common.hh to shared-tests submodule.
	* .gitmodules: Register submodule.
	* tests/Makefile.am: Fix common.hh path and add
	shared-tests to include path.
	* tests/common.hh: Remove.
	* tests/shared-tests: New.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Limit output precision when displaying a function.
	* include/roboptim/core/visualization/gnuplot-function.hh:
	Limit output precision to two digits.
	* tests/finite-difference-gradient.stdout,
	* tests/visualization-gnuplot-function.stdout,
	* tests/visualization-gnuplot-simple.stdout: Regenerate.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute Windows related files.
	Reported by François Keith.
	* Makefile.am: Here.

2009-10-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle symbol visibility under Linux.
	* include/roboptim/core/portability.hh: Here.

2009-10-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Add missing ROBOPTIM_DLLEXPORT.
	* include/roboptim/core/visualization/gnuplot-commands.hh,
	* include/roboptim/core/visualization/gnuplot.hh,
	* src/roboptim-core-dummy-plugin.cc: Export all symbols properly.

2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance error message in solver-factory.hxx.